<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class Pedido_delivery extends Model
{
    //
}
