Table ingresos {
    id int [pk, increment]
    id_usu int [ref: > usuarios.id]
    id_apc int [ref: > aperturas_caja.id]
    importe decimal(10,2)
    responsable varchar(100)
    motivo varchar(255)
    fecha_reg datetime
    estado char(1)
}

Table venta {
    id_venta int [pk, increment]

    //  RELACIONES
    id_cliente int [ref: > clientes.id]
    id_tipo_doc int [ref: > tipo_documentos.id]
    id_usu int [ref: > usuarios.id]
    id_apc int [ref: > aperturas_caja.id]

    //  DOCUMENTO SUNAT
    serie_doc char(4)
    nro_doc varchar(8)
    codigo_operacion varchar(4) // ej: 0101

    //  TOTALES (OBLIGATORIO SUNAT)
    op_gravadas decimal(10,2) [default: 0]
    op_exoneradas decimal(10,2) [default: 0]
    op_inafectas decimal(10,2) [default: 0]

    igv decimal(10,2)
    total decimal(10,2)

    // FECHAS
    fecha_emision datetime
    fecha_vencimiento date

    //  SUNAT RESPUESTA
    enviado_sunat char(1) [default: '0']
    estado_sunat varchar(20)

    code_respuesta_sunat varchar(5)
    descripcion_sunat_cdr varchar(300)

    hash_cpe varchar(200)
    hash_cdr varchar(200)
    name_file_sunat varchar(100)

    //  ESTADO INTERNO
    estado varchar(15) [default: 'emitido']

    created_at datetime
    updated_at datetime
}

Table pedido_delivery {
    id int [pk, increment]
    id_cliente int [ref: > clientes.id]
    id_repartidor int [ref: > usuarios.id]
    tipo_pago int [ref: > tipo_pagos.id]
    entrega enum('domicilio','recoger')
    canal  varchar 
    pedido_programado boolean [default: false]
    hora_entrega time
    paga_con decimal(10,2)
    comision_delivery decimal(10,2)
    amortizacion decimal(10,2)
    nro_pedido varchar(10)
    nombre_cliente varchar(100)
    telefono_cliente varchar(20)
    direccion_cliente varchar(100)
    referencia_cliente varchar(100)
    email_cliente varchar(200)
    fecha_preparacion datetime
    fecha_envio datetime
    fecha_entrega datetime
    created_at datetime
    updated_at datetime
}


Table Pedido_mesa {
    id int [pk, increment]
    id_mesa int [ref: > mesas.id_mesa]
    id_mozo int [ref: > usuarios.id]
    nombre_cliente varchar(150)
    nro_personas int
    created_at datetime
    updated_at datetime
}




Table tipo_pedido {
    id int [pk, increment]
    nombre varchar(50) // mesa, llevar, delivery
}


Table insumo {
    id int [pk, increment]
    insumo_catg_id int [ref: > insumo_catg.id]
    tipomedida_id int [ref: > tipomedida.id]
    codigo varchar(50)
    nombre varchar(100)
    stock varchar(50)
    costo decimal(10,2)
    estado char(1) [default: 'a']
}


Table insumo_catg {
    id int [pk, increment]
    descripcion VARCHAR(100) 
    estado char(1) [default: 'a']
}

Table tipomedida {
    id int [pk, increment]
    descripcion varchar(100)
    grupo varchar(50)
}

Table proveedor {
    id_prov int [pk, increment]
    tipo_documento varchar // DNI o RUC
    numero varchar
    razon_social varchar
    direccion varchar
    telefono varchar
    email varchar
    contacto varchar
    estado char
}

Table aperturas_caja {
    id int [pk, increment]
    usuario_id int [ref: > usuarios.id]
    caja_id int [ref: > cajas.id]
    turno_id int [ref: > turnos.id]
    fecha_apertura datetime
    monto_apertura decimal(10,2)
    fecha_cierre datetime
    monto_cierre decimal(10,2)
    monto_sistema decimal(10,2)
    diferencia decimal(10,2)
    estado char(1) [default: 'a']
    observacion varchar(255)

    created_at datetime
    updated_at datetime
}


Table turnos {
    id int [pk, increment]
    nombre varchar(50)   // mañana, tarde, noche
    hora_inicio time
    hora_fin time
    estado char(1)

    created_at datetime
    updated_at datetime
}


Table clientes {
    id int [pk, increment]
    tipo_cliente int
    tipo_documento varchar(3)  // DNI o RUC
    numero_documento varchar(13)
    nombres varchar(100)
    razon_social varchar(100)
    telefono int
    fecha_nac date
    correo varchar(100)
    password varchar(255)
    direccion varchar(100)
    referencia varchar(100)
    estado varchar(5) [default: 'a']

    created_at datetime
    updated_at datetime
}

Table combos {
    id int [pk, increment]
    nombre varchar(255)
    id_area int [ref: > areas_produccion.id]
    nota text
    descripcion text
    imagen varchar(255)
    estado enum('activo','inactivo')
    delivery boolean

    created_at datetime
    updated_at datetime
}

Table productos {
    id int [pk, increment]
    id_catg int [ref: > producto_categorias.id_catg]
    id_areap int [ref: > areas_produccion.id]
    nombre varchar(255)
    notas text
    descripcion text
    imagen varchar(255)
    estado char(1)
    orden int
    created_at datetime
    updated_at datetime
}

Table producto_pres {
    id int [pk, increment]
    producto_id int [ref: > productos.id]
    codigo varchar(50)
    codigo_qr varchar(255)
    codigo_barra varchar(100)
    presentacion varchar(100)
    descripcion varchar(150)
    precio decimal(10,2)
    precio_delivery decimal(10,2) [default: 0]
    costo decimal(10,2) [default: 0]
    stock int [default: 0]
    stock_min int [default: 0]
    igv decimal(5,2) [default: 18]
    receta text
    delivery boolean [default: true]
    estado char(1) [default: 'a']
    orden int [default: 0]

    created_at datetime
    updated_at datetime
}



Table areas_produccion {
    id int [pk, increment]
    nombre varchar(255)
    impresora_id int [ref: > impresoras.id] 
    estado char(1)
    created_at datetime
    updated_at datetime
}

Table roles{
    id bigint [pk, increment]
    nombre varchar(50) [unique]
    descripcion varchar(255)
    created_at timestamp
    updated_at timestamp
}

Table usuarios {
    id int [pk, increment]
    dni varchar
    nombres varchar
    apellido_paterno varchar
    apellido_materno varchar
    email varchar
    cargo_rrhh varchar
    foto varchar
    username varchar
    password varchar
    rol_id int [ref: > roles.id]
    estado int
    created_at datetime
    updated_at datetime
}

Table producto_categorias {
    id_catg int [pk, increment]
    descripcion varchar(100)
    delivery boolean
    orden int
    imagen varchar(255)
    estado char(1)
    created_at datetime
    updated_at datetime
}

Table cajas {
    id int [pk, increment]
    nombre varchar(100)
    estado char(1)
    created_at datetime
    updated_at datetime
}

Table caja_usuario {
    id int [pk, increment]
    caja_id int [ref: > cajas.id]
    usuario_id int [ref: > usuarios.id]
    created_at datetime
    updated_at datetime
}

Table salons {
    id_salon int [pk, increment]
    nombre varchar(100) [not null]
    estado enum('activo', 'inactivo')
    created_at timestamp
    updated_at timestamp
}

Table mesas {
    id_mesa int [pk, increment]
    id_salon int [ref: > salons.id_salon]
    nombre varchar(10)
    estado enum('activo', 'ocupado', 'inactivo')
    created_at timestamp
    updated_at timestamp
}

Table impresoras { 
    id bigint [pk, increment]
    nombre varchar(100) [not null]
    estado enum('activo','inactivo') [default: 'activo']
    created_at timestamp
    updated_at timestamp
}

Table tipo_documentos {
    id bigint [pk, increment]
    descripcion varchar(100)
    serie varchar(10)
    numero varchar(20)
    estado enum('activo','inactivo') [default: 'activo']
    created_at timestamp
    updated_at timestamp
}

Table tipo_pagos {
    id bigint [pk, increment]
    descripcion varchar(100)
    created_at timestamp
    updated_at timestamp
}

Table metodo_pagos {
    id bigint [pk, increment]
    tipo_pago_id bigint [ref: > tipo_pagos.id]
    estado enum('activo','inactivo') [default: 'activo']
    descripcion varchar(100)
    created_at timestamp
    updated_at timestamp
}

Table empresas {
    id bigint [pk, increment]

    ruc char(11) [not null, unique]
    razon_social varchar(255) [not null]
    nombre_comercial varchar(255)

    direccion_comercial varchar(255)
    direccion_fiscal varchar(255)

    ubigeo char(6)
    departamento varchar(100)
    provincia varchar(100)
    distrito varchar(100)

    modo enum('produccion','beta') [default: 'beta']

    usuariosol varchar(100)
    clave_sol text
    clavecertificado text

    logo varchar(255)
    celular varchar(20)
    email varchar(150)

    created_at timestamp
    updated_at timestamp
}

Table reclamos {
    id bigint [pk, increment]
    tipo_documento varchar(20)
    numero_documento varchar(20)
    primer_nombre varchar(100)
    segundo_nombre varchar(100)
    primer_apellido varchar(100)
    segundo_apellido varchar(100)
    correo varchar(150)
    telefono varchar(20)
    direccion varchar(255)
    departamento varchar(100)
    provincia varchar(100)
    distrito varchar(100)
    servicio_contratado varchar(255)
    numero_orden varchar(50)
    identificacion_servicio varchar(100)
    monto_reclamado decimal(10,2)
    tipo_reclamo varchar(20)
    motivo text
    detalle_solicitud text
    pedido_concreto text
    acepto_politicas boolean [default: true]

    created_at timestamp
    updated_at timestamp
}

Table settings {
    id bigint [pk, increment]
    key varchar(255) [not null]
    value text
    created_at timestamp
    updated_at timestamp
}